@@ -74,6 +74,7 @@ extern const AVFilter ff_af_arealtime;
 extern const AVFilter ff_af_aresample;
 extern const AVFilter ff_af_areverse;
 extern const AVFilter ff_af_arnndn;
+extern const AVFilter ff_af_asdr;
 extern const AVFilter ff_af_asegment;
 extern const AVFilter ff_af_aselect;
 extern const AVFilter ff_af_asendcmd;
