@@ -24,6 +24,7 @@ version <next>:
 - amr parser
 - (a)latency filters
 - GEM Raster image decoder
+- asdr audio filter
 
 
 version 4.4:
